# WorldRAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN_IMPLEMENTATION.md  RAPPORT_PROJET.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: cypher-reviewer.md
.claude/rules/: neo4j-cypher.md  python-backend.md  testing.md  typescript-frontend.md
backend/: langgraph.json
backend/app/: config.py  main.py
backend/scripts/: cleanup_entities.py  cleanup_entities_v2.py  cleanup_entities_v3.py  migrate_v2.py  retry_chapter.py  run_full_pipeline.py  test_chat.py
backend/tests/: conftest.py  test_base_repository.py  test_bluebox.py  test_character_state_api.py  test_character_state_repo.py  test_character_state_schemas.py  test_chat_data_driven.py  test_chat_graph.py  test_chat_nodes.py  test_chat_routes_updated.py  test_chat_service.py  test_chat_service_refactored.py  test_chat_service_v2.py  test_chat_state.py  test_chat_v2_pipeline.py  test_checkpointer.py  test_chunking.py  test_community_clustering.py  test_config_new_fields.py  test_context_generate_nodes.py  test_cost_tracker.py  test_deduplication.py  test_embedding_pipeline.py  test_entity_registry.py  test_entity_repo_v3.py  test_extract_graphiti_endpoint.py  test_faithfulness_rewrite_nodes.py  test_feedback_endpoints.py  test_golden_extraction.py  test_graphiti_client.py  test_graphiti_ingest.py  test_hybrid_search.py  test_ingestion.py  test_intent_hyde_nodes.py  test_layer3_schemas.py  test_local_models.py  test_memory_nodes.py  test_mention_detector.py  test_narrative_temporal_mapper.py  test_ontology_loader.py  (+25 more)
docs/: README.md  api-reference.md  architecture.md  data-model.md  deployment.md  extraction-pipeline.md  ontology.md  tech-stack.md  testing.md
docs/architecture/: co-evolutionary-extraction.md  extraction-pipeline.md
docs/plans/: 2026-02-25-pipeline-optimization-design.md  2026-02-25-worldrag-product-design.md  2026-02-25-worldrag-v1-implementation.md  (+12 more)
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
ontology/: core.yaml  litrpg.yaml  primal_hunter.yaml
scripts/: evaluate_kg.py  fix_duplicate_relations.cypher  init_neo4j.cypher  init_postgres.sh  migrate_v3.py
(+386 files in other folders)
