[project]
name = "worldrag"
version = "0.1.0"
description = "Knowledge Graph construction system for fiction novel universes"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.0",
    # Graph DB
    "neo4j>=5.27",
    "neo4j-graphrag>=1.0",
    # Extraction
    "langextract>=0.1",
    "instructor>=1.7",
    # LLM Providers
    "openai>=1.60",
    "anthropic>=0.40",
    "google-genai>=1.0",
    # Agents / Orchestration
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langgraph-checkpoint-postgres>=2.0",
    # Embeddings & Reranking
    "sentence-transformers>=3.0",  # Local embeddings (BGE-M3, free)
    "cohere>=5.0",
    # Task queue
    "arq>=0.26",
    "redis>=5.0",
    # Monitoring & Observability
    "langfuse>=2.27",
    "structlog>=24.0",
    "tiktoken>=0.8",
    # Resilience
    "tenacity>=9.0",
    "aiolimiter>=1.1",
    # Document parsing
    "ebooklib>=0.18",
    "pdfplumber>=0.11",
    "beautifulsoup4>=4.12",
    "httpx>=0.28",
    # Utils
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "thefuzz>=0.22",
    "asyncpg>=0.30",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
voyage = [
    "voyageai>=0.3",  # Optional: Voyage AI API embeddings
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH", "ASYNC"]
ignore = ["B008"]  # Depends() in FastAPI route defaults is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "llm: marks tests that require LLM API calls",
]
